# wellswap-platform-v2

./: .gitignore  .vercelignore  Anchor.toml  Cargo.toml  LICENSE  README.md  backup-wellswap.bat  backup-wellswap.sh  check-users.js  deploy-solana.sh  env.example  fulfillment-api-fixed.js  next.config.js  package-lock.json  package.json  rls-disable.sql  supabase-setup.sql  supabase_email_logs_table.sql  supabase_setup_complete_fixed.sql  supabase_simple_setup.sql  system-check.js  test-checklist.md  test-connection.js  test-wallet-keypair.json  tsconfig.json  update-admin-by-id.js  update-admin.js  vercel.json  wellswap-production-readiness-analysis.md
app/: layout.tsx  page.tsx
components/: AdminInquiryPanel.tsx  AdvancedCharts.tsx  AdvancedOCR.tsx  ContractIntegration 2.js  ContractIntegration.js  ContractIntegration.ts  SolanaContractIntegration.ts  SolanaWalletConnect.tsx  SolflareWalletConnect.tsx  WellSwapComplete.tsx  WellSwapMain.tsx  WellSwapOptimized.tsx
hooks/: useApiIntegration.ts  useAppState.ts  useContract.ts.ts
lib/: advanced-analytics.ts  ai-ocr-enhanced.ts  ai-ocr.ts  ai-valuation-advanced.ts  ai-valuation-client.ts  api.ts  config.ts  database-wellswap.ts  database.types.ts  mobile-wallet-connect.ts  ocr-cdn.ts  performance-optimization.ts  products.ts  realtime-notifications.ts  solana-client.ts  storage.ts  supabase.backup.ts  supabase.ts  translations.ts  wellswap-idl.ts
programs/wellswap-complete/: Cargo.toml
programs/wellswap-complete/src/: lib.rs
programs/wellswap-insurance/: Cargo.toml
programs/wellswap-insurance/src/: lib.rs
(+84 files in other folders)
