[package]
name = "wellswap-complete"
version = "0.1.0"
description = "WellSwap Complete Insurance Asset Trading Platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wellswap_complete"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
